After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741332 - Fix compilation of GstQtGLVideoSinkBase with MinGW-w64
Fix compilation of GstQtGLVideoSinkBase with MinGW-w64
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: qt-gstreamer
git master
Other Windows
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-10 12:19 UTC by Jeremie Knuesel
Modified: 2015-02-22 13:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Rename 'interface' argument to 'balance_interface' to fix compilation with MinGW-w64 (2.61 KB, patch)
2014-12-10 12:19 UTC, Jeremie Knuesel
committed Details | Review

Description Jeremie Knuesel 2014-12-10 12:19:01 UTC
Created attachment 292438 [details] [review]
Rename 'interface' argument to 'balance_interface' to fix compilation with MinGW-w64

Compiling GstQtGLVideoSinkBase with MinGW-w64 fails because the class has a method argument named 'interface', which appears to be a reserved keyword on Windows. See e.g. https://bugzilla.redhat.com/show_bug.cgi?id=980270 .

The attached patch renames the argument to 'balance_interface'.
Comment 1 Tim-Philipp Müller 2015-02-22 13:51:37 UTC
Pushed to master, thanks for the patch!

commit cf09822eeeee802a0314d7b0ef8c5a469558a0d5
Author: Jeremie Knuesel <jeremie.knusel@sensefly.com>
Date:   Wed Dec 10 13:12:17 2014 +0100

    qtglvideosinkbase: don't use variable name 'interface' which is a reserved keyword on Windows
    
    Rename 'interface' argument to 'balance_interface' to fix compilation
    with MinGW-w64
    
    Compiling GstQtGLVideoSinkBase with MinGW-w64 fails because the class
    has a method argument named 'interface', which appears to be a reserved
    keyword on Windows.
    
    https://bugzilla.redhat.com/show_bug.cgi?id=980270
    https://bugzilla.gnome.org/show_bug.cgi?id=741332