qtglvideosinkbase: don't use variable name 'interface' which is a reserved keyword on Windows

Rename 'interface' argument to 'balance_interface' to fix compilation
with MinGW-w64

Compiling GstQtGLVideoSinkBase with MinGW-w64 fails because the class
has a method argument named 'interface', which appears to be a reserved
keyword on Windows.

https://bugzilla.redhat.com/show_bug.cgi?id=980270
https://bugzilla.gnome.org/show_bug.cgi?id=741332